--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.12",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.9",
@@ -22,6 +23,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.4.2",
