--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.4.2",
